part1/1.08_backend_ingress/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: backend-svc
spec:
  type: ClusterIP
  selector:
    app: singlepage
  ports:
    - port: 4567
      protocol: TCP
      targetPort: 3001
