part1/1.08_backend_ingress/manifests/ingress.yaml
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: backend-ing
spec:
  rules:
    - http:
        paths:
        - path: /
          backend:
            serviceName: backend-svc
            servicePort: 4567
